# example-cqrs

./: .gitignore
apps/: Cargo.toml
apps/account_command/: Cargo.toml
apps/account_command/src/: main.rs
contexts/: Cargo.toml
contexts/account/: Cargo.toml
contexts/account/src/: lib.rs
contexts/account/src/command/application/account/ports/inbound/: create_account.rs  get_events.rs  mod.rs  send_event.rs
contexts/account/src/command/application/account/ports/outbound/: repository.rs
contexts/account/src/command/application/account/service/: account.rs  mod.rs  outbox.rs
contexts/account/src/command/domain/account/: mod.rs
contexts/account/src/command/domain/account/entity/: aggregate.rs  command.rs  error.rs  event.rs  mod.rs
contexts/account/src/command/domain/account/machine/: context.rs  mod.rs
contexts/account/src/command/domain/account/machine/states/: mod.rs  new.rs
contexts/account/src/command/infrastructure/adapters/inbound/: graphql.rs
contexts/account/src/command/infrastructure/adapters/outbound/: sqlite.rs
contexts/account/src/command/infrastructure/dtos/: mod.rs
contexts/account/src/command/infrastructure/dtos/storage/: sql.rs
contexts/account/src/command/infrastructure/dtos/transport/: graphql.rs  mod.rs  nats.rs
contexts/account/src/command/migrations/: 20221127134315_create_account_tables.sql
contexts/account/src/common/application/ports/outbound/: account_services.rs  mod.rs
contexts/account/src/common/infrastructure/adapters/outbound/account_services/: argon2.rs
